// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Cards
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard se debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Cards
  </h1>
</div>
`;
